影響範囲の少ない高速詠唱術式カートリッジとエレメンタルボウのツールチップ表示をライフル類と共通化
(cherry picked from commit 953ee2db8bdb1f78a81644cecd472f7a03e0d74a)