@@ -3,8 +3,10 @@ package jp.aquafactory.apprenticecodex.item.curios.quickcastscrollcartridge;
 import io.redspace.ironsspellbooks.api.spells.CastSource;
 import io.redspace.ironsspellbooks.api.spells.SpellData;
 import io.redspace.ironsspellbooks.util.TooltipsUtils;
+import jp.aquafactory.apprenticecodex.item.ScrollSlotTooltipClientHelper;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.item.ItemStack;
 import net.minecraftforge.api.distmarker.Dist;
@@ -14,8 +16,6 @@ import java.util.List;
 
 @OnlyIn(Dist.CLIENT)
 final class QuickcastCartridgeClientTooltip {
-    private static final String PREFIX = "item.apprenticecodex.quickcast_scroll_cartridge.tooltip.";
-
     private QuickcastCartridgeClientTooltip() {}
 
     static void append(ItemStack stack, List<Component> lines) {
@@ -23,37 +23,22 @@ final class QuickcastCartridgeClientTooltip {
         if (player == null) {
             return;
         }
-        var selected = QuickcastScrollCartridge.getSelectedSpellData(stack);
+        var tooltip = QuickcastScrollCartridge.getScrollTooltipData(stack);
         lines.add(Component.empty());
-        if (selected == SpellData.EMPTY) {
-            lines.add(Component.translatable(PREFIX + "empty").withStyle(ChatFormatting.GRAY));
+        if (Screen.hasControlDown() && !tooltip.entries().isEmpty()) {
+            ScrollSlotTooltipClientHelper.appendList(lines, tooltip, player);
             return;
         }
-
-        lines.add(Component.translatable(PREFIX + "selected").withStyle(ChatFormatting.GRAY));
-        // スペルコンテナ化せず、保存された選択魔法を通常詠唱と同じマナ・CD条件で表示する。
-        var details = TooltipsUtils.formatActiveSpellTooltip(stack, selected, CastSource.SPELLBOOK, player);
-        if (!details.isEmpty()) {
-            details.remove(0);
+        var selected = tooltip.selectedSpell();
+        if (selected == SpellData.EMPTY) {
+            lines.add(Component.translatable("item.apprenticecodex.common.scroll_slots.no_selected_spell")
+                    .withStyle(ChatFormatting.GRAY));
+        } else {
+            // 通常詠唱と同じマナ・CD条件を維持し、一覧だけ共通の折り畳み表示へ移す。
+            var details = TooltipsUtils.formatActiveSpellTooltip(stack, selected, CastSource.SPELLBOOK, player);
+            if (!details.isEmpty()) details.removeFirst();
+            lines.addAll(details);
         }
-        lines.addAll(details);
-
-        int selectedIndex = QuickcastScrollCartridge.getSelectedScrollIndex(stack);
-        boolean hasOtherSpells = false;
-        for (int slot = 0; slot < QuickcastScrollCartridge.getEnabledCalibrationScrollSlotCount(stack); slot++) {
-            if (slot == selectedIndex) {
-                continue;
-            }
-            var data = QuickcastScrollCartridge.readSpell(stack, slot);
-            if (data == SpellData.EMPTY) {
-                continue;
-            }
-            if (!hasOtherSpells) {
-                lines.add(Component.empty());
-                lines.add(Component.translatable(PREFIX + "others").withStyle(ChatFormatting.GRAY));
-                hasOtherSpells = true;
-            }
-            lines.add(Component.literal("  ").append(TooltipsUtils.getTitleComponent(data, player)));
-        }
+        ScrollSlotTooltipClientHelper.appendHint(lines, tooltip.entries().size());
     }
 }
